fix: search height on mobile

--- a/front/src/app/modules/search/pages/search/search-mobile/search-mobile.component.scss
+++ b/front/src/app/modules/search/pages/search/search-mobile/search-mobile.component.scss
@@ -4,7 +4,7 @@
 .SearchPage {
 
   &-content {
-    height: calc(100vh - 109px);
+    height: calc(100vh - 60px);
     padding-top: 10px;
     overflow: auto;
   }
